monticore-generator/src/test/resources/cocos/valid/Component.mc4
package cocos.valid;

component grammar Component {

  external A;

  abstract B;

  interface C;

}
